<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tidepertment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/depertment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Depertment" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tistudentid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/studentid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Student ID" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tihall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/hallid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Hall ID" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiroom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/room"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Room No" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Phone No" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Hall:"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/gender_textview"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <RadioButton
                    android:id="@+id/male_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="15dp"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/female_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/female"
                    android:textSize="15dp"/>
                <RadioButton
                    android:id="@+id/exta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/ext_a"
                    android:textSize="15dp"/>
                <RadioButton
                    android:id="@+id/extb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/ext_b"
                    android:textSize="15dp"/>
                <RadioButton
                    android:id="@+id/extc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/ext_c"
                    android:textSize="15dp"/>
                <RadioButton
                    android:id="@+id/extd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/ext_d"
                    android:textSize="15dp"/>
                <RadioButton
                    android:id="@+id/exte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/ext_e"
                    android:textSize="15dp"/>
            </RadioGroup>
        </LinearLayout>

        <Button android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Register"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</ScrollView>